# zmq_network

./: .gitignore  config.json  config_example.json  flake.nix  readme.md
cpp/: CMakeLists.txt
cpp/cmake/: zmq_networkConfig.cmake.in
cpp/include/: zmq_network.hpp
cpp/include/zmq_network/: helper.hpp  pub.hpp  sub.hpp
cpp/src/: pub.cc  sub.cc
python/: pyproject.toml
python/src/zmq_network/: __init__.py  config_reader.py  network_node.py
